# src/model/dto/CategoriaLivroRequestDto.ts
@@ -1,0 +1,8 @@
+export class CategoriaLivroRequestDto{
+    nome: string;
+
+    constructor(nome: string){
+        this.nome = nome;
+    }
+
+}
