# src/model/dto/CategoriaUsuarioResquestDto.ts
@@ -1,0 +1,8 @@
+export class CategoriaUsuarioRequestDto{
+    nome: string;
+
+    constructor(nome: string){
+        this.nome = nome;
+    }
+
+}
