# src/model/dto/CursoRequestDto.ts
@@ -1,0 +1,8 @@
+export class CursoRequestDto{
+    nome: string;
+
+    constructor(nome: string){
+        this.nome = nome;
+    }
+
+}
